--- a/pages/p4/index.html
+++ b/pages/p4/index.html
@@ -1,8 +1,58 @@
-<div style="width: 100%; height: 100%; position: relative; background: white">
-    <div style="width: 677px; height: 1408px; left: 423px; top: 1252px; position: absolute; transform: rotate(-180deg); transform-origin: 0 0; opacity: 0.80; background: rgba(137.27, 137.27, 137.27, 0.80); box-shadow: 250px 250px 250px; border: 1px black solid; filter: blur(250px)"></div>
-    <div style="width: 386px; height: 776px; left: 124px; top: 103px; position: absolute; background: linear-gradient(90deg, black 0%, rgba(10.34, 9.94, 9.94, 0.74) 20%, rgba(20, 19.23, 19.23, 0.50) 34%, rgba(40.16, 38.61, 38.61, 0) 100%); box-shadow: 5px 5px 5px; border-radius: 3px; border: 1px rgba(0, 0, 0, 0.90) solid; filter: blur(5px)"></div>
-    <div style="width: 325px; height: 449px; left: 663px; top: 171px; position: absolute; color: black; font-size: 13px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 24px; word-wrap: break-word">Of course the Japanese room does have its picture alcove, and in it a hanging scroll and a flower arrangement. But the scroll and the flowers serve not as ornament but rather to give depth to the shadows. We value a scroll above all for the way it blends with the walls of the alcove, and thus we consider the mounting quite as important as the calligraphy or painting. Even the greatest masterpiece will lose its worth as a scroll if it fails to blend with the alcove, while a work of no particular distinction may blend beautifully with the room and set off to unexpected advantage both itself and its surroundings. Wherein lies the power of an otherwise ordinary work to produce such an effect? Most often the paper, the ink, the fabric of the mounting will possess a certain look of antiquity, and this look of antiquity will strike just the right balance with the darkness of the alcove and room.</div>
-    <div style="width: 730px; height: 96px; left: 663px; top: 722px; position: absolute; color: black; font-size: 13px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 24px; word-wrap: break-word">For the painting here is nothing more than another delicate surface upon which the faint, frail light can play; it performs precisely the same function as the sand-textured wall. This is why we attach such importance to age and patina. A new painting, even one done in ink monochrome or subtle pastels, can quite destroy the shadows of an alcove, unless it is selected with the greatest care.</div>
-    <div style="width: 323px; height: 360px; left: 1067px; top: 243px; position: absolute; color: black; font-size: 13px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 24px; word-wrap: break-word">We have all had the experience, on a visit to one of the great temples of Kyoto or Nara, of being shown a scroll, one of the temple's treasures, hanging in a large, deeply recessed alcove. So dark are these alcoves, even in bright daylight, that we can hardly discern the outlines of the work; all we can do is listen to the explanation of the guide, follow as best we can the all-but invisible brush strokes, and tell ourselves how magnificent a painting it must be. Yet the combination of that blurred old painting and the dark alcove is one of absolute harmony. The lack of clarity, far from disturbing us, seems rather to suit the painting perfectly.</div>
-    <div style="width: 174px; height: 615px; left: 230px; top: 107px; position: absolute; background: linear-gradient(360deg, rgba(255, 253.65, 253.65, 0.30) 0%, rgba(217.40, 215.95, 215.95, 0) 100%, rgba(217.40, 215.95, 215.95, 0.12) 100%); box-shadow: 15px 15px 15px; border-radius: 5px; filter: blur(15px)"></div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page3</title>
+  </head>
+
+  <body>
+    <div class="element">
+      <div class="div">
+        <div class="group">
+          <div class="rectangle"></div>
+          <img class="rec1" src="rectangle14.svg" />
+          <img class="rec2" src="rectangle15.svg" />
+        </div>
+
+        <p class="p1">
+          Of course the Japanese room does have its picture alcove, and in it a hanging scroll and a flower arrangement.
+          But the scroll and the flowers serve not as ornament but rather to give depth to the shadows. We value a
+          scroll above all for the way it blends with the walls of the alcove, and thus we consider the mounting quite
+          as important as the calligraphy or painting. Even the greatest masterpiece will lose its worth as a scroll if
+          it fails to blend with the alcove, while a work of no particular distinction may blend beautifully with the
+          room and set off to unexpected advantage both itself and its surroundings. Wherein lies the power of an
+          otherwise ordinary work to produce such an effect? Most often the paper, the ink, the fabric of the mounting
+          will possess a certain look of antiquity, and this look of antiquity will strike just the right balance with
+          the darkness of the alcove and room.
+        </p>
+
+        <p class="p2">
+          For the painting here is nothing more than another delicate surface upon which the faint, frail light can
+          play; it performs precisely the same function as the sand-textured wall. This is why we attach such importance
+          to age and patina. A new painting, even one done in ink monochrome or subtle pastels, can quite destroy the
+          shadows of an alcove, unless it is selected with the greatest care.
+        </p>
+
+        <p class="p3">
+          We have all had the experience, on a visit to one of the great temples of Kyoto or Nara, of being shown a
+          scroll, one of the temple&#39;s treasures, hanging in a large, deeply recessed alcove. So dark are these
+          alcoves, even in bright daylight, that we can hardly discern the outlines of the work; all we can do is listen
+          to the explanation of the guide, follow as best we can the all-but invisible brush strokes, and tell ourselves
+          how magnificent a painting it must be. Yet the combination of that blurred old painting and the dark alcove is
+          one of absolute harmony. The lack of clarity, far from disturbing us, seems rather to suit the painting
+          perfectly.
+        </p>
+
+        <div class="next">
+            <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p4/">&rarr;</a>
+        </div>
+
+      </div>
+    </div>
+  </body>
+</html>
