--- a/pages/p5/index.html
+++ b/pages/p5/index.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="globals.css" />
-        <link rel="stylesheet" href="main.css" />
-    </head>
-    <body>
-        <div class="element">
-            <div class="div">
-                <div class="overlap">
-                    <p class="text-wrapper">
-                        A Japanese room might be likened to an inkwash painting, the paper-paneled shoji being the expanse where the
-                        ink is thinnest, and the alcove where it is darkest. Whenever I see the alcove of a tastefully built
-                        Japanese room, I marvel at our comprehension of the secrets of shadows, our sensitive use of shadow and
-                        light.
-                    </p>
-                </div>
-                <div class="overlap-group">
-                    <p class="text-wrapper">
-                        The &#34;mysterious Orient&#34; of which Westerners speak probably refers to the uncanny silence of these
-                        dark places. And even we as children would feel an inexpressible chill as we peered into the depths of an
-                        alcove to which the sunlight had never penetrated. Where lies the key to this mystery? illtimately it is the
-                        magic of shadows. Were the shadows to be banished from its comers, the alcove would in that instant revert
-                        to mere void.
-                    </p>
-                </div>
-                <div class="overlap-group-2">
-                    <div class="rectangle"></div>
-                    <p class="for-the-beauty-of">
-                        For the beauty of the alcove is not the work of some clever device. An empty space is marked off with plain
-                        wood and plain walls, so that the light drawn into it forms dim shadows within emptiness. There is nothing
-                        more. And yet, when we gaze into the darkness that gathers behind the crossbeam, around the flower vase,
-                        beneath the shelves, though we know perfectly well it is mere shadow, we are overcome with the feeling that
-                        in this small corner of the atmosphere there reigns complete and utter silence; that here in the darkness
-                        immutable tranquility holds sway.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page5</title>
+  </head>
 
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">next</a>
+  <body>
+    <div class="rec1"></div>
+    <div class="rec3"></div>
+    <div class="rec2"></div>
+
+    <div class="p3"><p>The "mysterious Orient" of which Westerners speak probably refers to the uncanny silence of these dark places. And even we as children would feel an inexpressible chill as we peered into the depths of an alcove to which the sunlight had never penetrated. Where lies the key to this mystery? illtimately it is the magic of shadows. Were the shadows to be banished from its comers, the alcove would in that instant revert to mere void.</p></div>
+
+    <div class="p2"><p>For the beauty of the alcove is not the work of some clever device. An empty space is marked off with plain wood and plain walls, so that the light drawn into it forms dim shadows within emptiness. There is nothing more. And yet, when we gaze into the darkness that gathers behind the crossbeam, around the flower vase, beneath the shelves, though we know perfectly well it is mere shadow, we are overcome with the feeling that in this small corner of the atmosphere there reigns complete and utter silence; that here in the darkness immutable tranquility holds sway.</p></div>
+    
+    <div class="p1"><p>A Japanese room might be likened to an inkwash painting, the paper-paneled shoji being the expanse where the ink is thinnest, and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, I marvel at our comprehension of the secrets of shadows, our sensitive use of shadow and light.</p></div>
+
+    <div class="next">
+        <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p6/">&rarr;</a>
+    </div>
+
+</html>
