--- a/pages/p6/index.html
+++ b/pages/p6/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="main.css" />
-    <script>
-        (function(d) {
-          var config = {
-            kitId: 'sbc4txu',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-      </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page6</title>
   </head>
-<div style="width: 100%; height: 100%; position: relative; background: #292929">
-    <div style="width: 813px; height: 813px; left: 350px; top: 86px; position: absolute; opacity: 0.98; background: #D9D9D9; box-shadow: 10px 10px 10px; border-radius: 9999px; border: 1px black solid; filter: blur(10px)"></div>
-    <div style="width: 8px; height: 914px; left: 756px; top: 0px; position: absolute; transform: rotate(180deg); transform-origin: 0 0; opacity: 0.70; background: #292929; box-shadow: 5px 5px 5px; border-radius: 5px; filter: blur(5px)"></div>
-    <div style="width: 257px; height: 450px; left: 461px; top: 265px; position: absolute; text-align: right; color: black; font-size: 12px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 25px; letter-spacing: 0.12px; word-wrap: break-word">This was the genius of our ancestors, that by cutting off the light from this empty space they imparted to the world of shadows that formed there a quality of mystery and depth superior to that of any wall painting or ornament. The technique seems simple, but was by no means so simply achieved. We can imagine with little difficulty what extraordinary pains were taken with each invisible detail-the placement of the window in the shelving recess, the depth of the crossbeam, the height of the threshold. But for me the most exquisite touch is-the pale white glow of the shoji in the study bay; I need only pause before it and I forget the passage of time.</div>
-    <div style="width: 252px; height: 594px; left: 782px; top: 215px; position: absolute; color: black; font-size: 12px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 25px; letter-spacing: 0.12px; word-wrap: break-word">The study bay, as the name suggests, was originally a projecting window built to provide a place for reading. Over the years it came to be regarded as no more than a source of light for the alcove; but most often it serves not so much to illuminate the alcove as to soften the sidelong rays from without, to filter them through paper panels. There is a cold and desolate tinge to the light by the time it reaches these panels. The little sunlight from the garden that manages to make its way beneath the eaves and through the corridors has by then lost its power to illuminate, seems drained of the complexion of life. It can do no more than accentuate the whiteness of the paper. I sometimes linger before these panels and study the surface of the paper, bright, but giving no impression of brilliance.</div>
-</div>
+
+  <body>
+    <div class="element">
+
+      <div class="div">
+
+        <div class="group">
+
+          <p class="text">
+            This was the genius of our ancestors, that by cutting off the light from this empty space they imparted to
+            the world of shadows that formed there a quality of mystery and depth superior to that of any wall painting
+            or ornament. The technique seems simple, but was by no means so simply achieved. We can imagine with little
+            difficulty what extraordinary pains were taken with each invisible detail-the placement of the window in the
+            shelving recess, the depth of the crossbeam, the height of the threshold. But for me the most exquisite
+            touch is-the pale white glow of the shoji in the study bay; I need only pause before it and I forget the
+            passage of time. <br /><br /><br />The study bay, as the name suggests, was originally a projecting window
+            built to provide a place for reading. Over the years it came to be regarded as no more than a source of
+            light for the alcove; but most often it serves not so much to illuminate the alcove as to soften the
+            sidelong rays from without, to filter them through paper panels. There is a cold and desolate tinge to the
+            light by the time it reaches these panels. The little sunlight from the garden that manages to make its way
+            beneath the eaves and through the corridors has by then lost its power to illuminate, seems drained of the
+            complexion of life. It can do no more than accentuate the whiteness of the paper. I sometimes linger before
+            these panels and study the surface of the paper, bright, but giving no impression of brilliance.
+          </p>
+        </div>
+
+        <div class="button" onclick="toggleButton()">OFF</div>
+<div class="svg-container" id="svgContainer"></div>
+
+        <div class="next">
+          <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p7/">&rarr;</a>
+        </div>
+
+      </div>
+    </div>
+    <script src="main.js" defer></script>
+  </body>
+</html>
