--- a/pages/p7/index.html
+++ b/pages/p7/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="main.css" />
-    <script>
-        (function(d) {
-          var config = {
-            kitId: 'sbc4txu',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-      </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <title>Page6</title>
   </head>
-<div style="width: 100%; height: 100%; position: relative; background: black">
-    <div style="width: 270px; height: 1360px; left: 893.06px; top: -194px; position: absolute; transform: rotate(22.62deg); transform-origin: 0 0; opacity: 0.90; background: white; box-shadow: 30px 30px 30px; border: 1px black solid; filter: blur(30px)"></div>
-    <div style="width: 300px; left: 606px; top: 655px; position: absolute; color: #171717; font-size: 16px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 22px; word-wrap: break-word">I blink in uncertainty at this dreamlike luminescence, feeling as though some misty film were blunting my vision. The light from the pale white paper, powerless to dispel the heavy darkness of the alcove, is instead repelled by the darkness, creating a world of confusion where dark and light are indistinguishable. </div>
-    <div style="width: 300px; height: 288px; left: 152px; top: 186px; position: absolute; color: #191919; font-size: 16px; font-family: Clarendon BT; font-weight: 400; line-height: 22px; word-wrap: break-word">In temple architecture the main room stands at a considerable distance from the garden; so dilute is the light there that no matter what the season, on fair days or cloudy, morning, midday, or evening, the pale, white glow scarcely varies. And the shadows at the interstices of the ribs seem strangely immobile, as if dust collected in the corners had become a part of the paper itself. </div>
-    <div style="width: 300px; height: 288px; left: 1060px; top: 342px; position: absolute; color: #191919; font-size: 16px; font-family: BIZ UDPMincho; font-weight: 400; line-height: 22px; word-wrap: break-word">Have not you yourselves sensed a difference in the light that suffuses such a room, a rare tranquility not found in ordinary light? Have you never felt a sort of fear in the face of the ageless, a fear that in that room you might lose all consciousness of the passage of time, that untold years might pass and upon emerging you should find you had grown old and gray?</div>
-</div>
-<a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">next</a>
+  
+  <body>
+    <div class="element">
+      <div class="div">
+        <div class="overlap">
+          <div class="overlap-group">
+            <div class="overlap-group-2">
+              <div class="rectangle"></div>
+              <p class="p2">
+                I blink in uncertainty at this dreamlike luminescence, feeling as though some misty film were blunting
+                my vision. The light from the pale white paper, powerless to dispel the heavy darkness of the alcove, is
+                instead repelled by the darkness, creating a world of confusion where dark and light are
+                indistinguishable.
+              </p>
+            </div>
+            <p class="p1">
+              In temple architecture the main room stands at a considerable distance from the garden; so dilute is the
+              light there that no matter what the season, on fair days or cloudy, morning, midday, or evening, the pale,
+              white glow scarcely varies. And the shadows at the interstices of the ribs seem strangely immobile, as if
+              dust collected in the corners had become a part of the paper itself.
+            </p>
+            <p class="p3">
+              Have not you yourselves sensed a difference in the light that suffuses such a room, a rare tranquility not
+              found in ordinary light? Have you never felt a sort of fear in the face of the ageless, a fear that in
+              that room you might lose all consciousness of the passage of time, that untold years might pass and upon
+              emerging you should find you had grown old and gray?
+            </p>
+          </div>
+          <input type="range" class="barcontain" id="slider" min="0" max="100" value="50">
+        </div>
+        <div class="next">
+          <a href="https://aimeeyi01.github.io/aimeeyi.github.io/pages/p8/">&rarr;</a>
+        </div>
+      </div>
+    </div>
+    <script src="main.js" defer></script>
+  </body>
+</html>
+
+
